# ClustersSimulation

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LifeSimulationHandler.cpp  LifeSimulationHandler.h  LifeSimulationRenderer.cpp  LifeSimulationRenderer.h  README.md  WindowHandler.cpp  main.cpp
resources/: current.csdat
src/: SDLUtils.cpp  WindowHandler.h  main.cpp  main.h
src/control/: BaseShader.cpp  BaseShader.h  ComputeShader.cpp  ComputeShader.h  GLUtilities.cpp  GLUtilities.h  LifeSimulationHandler.cpp  LifeSimulationHandler.h  SDLUtils.h  SaveAndLoad.cpp  SaveAndLoad.h  SimulationHandler.cpp  SimulationHandler.h
src/model/: LifeSimulationStructures.cpp  LifeSimulationStructures.h  Mesh.cpp  Mesh.h  SimulationStructures.cpp  SimulationStructures.h
src/shaders/: Atom.frag  Atom.vert  IterationPass1.comp  IterationPass2.comp  SimulationPass1.comp  SimulationPass2.comp  SimulationPass3.comp  SimulationRenderPass.comp
src/view/: LifeSimulationRenderer.cpp  LifeSimulationRenderer.h  Logger.cpp  Logger.h  Shader.cpp  Shader.h  SimulationRenderer.cpp  SimulationRenderer.h  WindowHandler.cpp  WindowHandler.h
